--- a/README.rdoc
+++ b/README.rdoc
@@ -3,6 +3,6 @@
 Proof of concept to verify Redis performance for storing huge datasets.
 
 Sample output:
-_Generated 10000 pnrs to check_
-_Taken 1.156453 sec to query 10000 in 9704774_
+Generated 10000 pnrs to check_
+Taken 1.156453 sec to query 10000 in 9704774
 
